			  - 2007-01-09:  Added remote logo in the admin interface so that logo is automatically updated in case of name changes  (Matteo)
			  - 2007-01-10:  Added new Settings / Maintenance screen with status and information about scheduled and automatic maintenance  (Matteo)

			+ Misc bugfixes
			  - 2006-11-14:  Campaign-edit wasn't correctly working with MySQL 3.x anymore  (Matteo)
			  - 2006-11-16:  Fixed file uploading with PHP5 and register_long_arrays disabled  (Matteo)
			  - 2006-11-21:  HTTP headers were not correctly passed to limitations when using XML-RPC invocation - bug #1598616  (Matteo)
			  - 2006-11-22:  Turkish language wasn't present in the dropdown list - bug #1600531  (Matteo)
			  - 2006-12-14:  Added missing continent mappings - bug #1602265  (Matteo)
			  - 2006-12-14:  Advertisers weren't able to change their own passwords with regster_globals off - bug #1613935  (Matteo)
			  - 2007-01-04:  Prompt to upgrade wasn't shown if maintenance wasn't correctly running  (Matteo)
			  - 2007-01-04:  Midnight maintenance caould have been skipped when scheduled maintenance wasn't running hourly  (Matteo)
			  - 2007-01-05:  Richmedia banners were showed inside DHTML banners only when using Windows - bug #1622422  (Matteo)
			  - 2007-01-05:  Install and upgrade were always detecting HTTPS on IIS6, breaking the whole application when not using HTTPS - bug #1616963  (Matteo)
			  - 2007-01-05:  Banners not matching delivery limitations were decreasing their campaign overall priority - bug #1605728  (Matteo)


phpAdsNew 2.0.9-pr1
			+ Misc bugfixes
			  - 2006-11-09:  Fixed reports compatibility with recent PHP versions - bug #1593451  (Matteo)
			  - 2006-11-10:  The left menu dropdown to move entities could grow bigger than the menu size  (Matteo)
			  - 2006-11-10:  Added back compatibility with PHP 4.1.x and 4.2.x  (Matteo)


phpAdsNew 2.0.9
			+ Misc changes